sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:14: error: not found: value real
            swap(reali,real+1);
                       ^